# chat_android

./: CMakeLists.txt  res.qrc
forms/: input_window.ui
include/: chat.h  client_server.h  input_window.h  mainwindow.h
src/: chat.cpp  chat.ui  client_server.cpp  input_window.cpp  input_window.ui  main.cpp  mainwindow.cpp  mainwindow.ui
